Solve Image overlapping container size

--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,10 @@ html {
   position: absolute;
 }
 
+img {
+  max-width: 100%;
+}
+
 body {
   width: 100vw;
   min-height: 100vh;
