--- a/scss/site/_site.scss
+++ b/scss/site/_site.scss
@@ -9,5 +9,7 @@ html  {
   position: absolute;
 }
 
-
+img {
+  max-width: 100%;
+}
 
